# CandleCodexAI

./: docker-compose.yml  package-lock.json
code/backend/: .env  Dockerfile  check_python.py  google_tcs.html  main.py  migrate_title.py  migrate_trading_prefs.py  pyproject.toml  requirements.txt  scrape_google.py  test_yfinance.py  test_yfinance_patched.py
code/backend/app/: __init__.py  app.py  db.py  schemas.py  temp.py
code/backend/app/constants/: plans.py
code/backend/app/core/: redis.py
code/backend/app/routers/: chat.py  payments.py  social_auth.py  stocks.py  trading.py  users.py
code/backend/app/services/: auth.py  orm_mode.code-search  payments.py  services.py  social_auth.py
code/frontend/: .env  package-lock.json  package.json  tailwind.config.js
code/frontend/public/: index.html
code/frontend/src/: .env  App.css  App.js  App.jsx  index.css  main.jsx
code/frontend/src/api/: axios.js
code/frontend/src/assets/css/: Chat.css  Home.css  Pricing.css  Profile.css
code/frontend/src/assets/pages/: chat.jsx  home.jsx  pricing.jsx  (+2 more)
code/frontend/src/components/: ErrorBoundary.js  StockChart.js  TradingChart.js
code/frontend/src/context/: AuthContext.jsx
code/frontend/src/pages/: ChatPage.js  Dashboard.js  LandingPage.js  LoginPage.js  PlansPage.js  ProfilePage.js  UpdateProfilePage.js
n8n/: Webhook Text Input → Response (1).json  Webhook Text Input → Response.json  n8n-database-setup.md  n8n-webhook-workflow.json  n8n-workflow-complete-setup.md  perplexity_node.json  perplexity_node2.json
n8n/technical_analyst_lite/: Technical_analyist.json
(+10 files in other folders)
