[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "databases>=0.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "fastapi-mail>=1.6.1",
    "fastapi-users>=15.0.1",
    "google-auth>=2.45.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "razorpay>=2.0.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "redis>=5.0.0",
    "fastapi-limiter>=0.1.6",
]
